# daceps

./: .gitignore  README.md
libraryone/: Makefile.am  cleanupacfiles.sh  configure.ac
libraryone/src/: Makefile.am
libraryone/src/libraryone/: Makefile.am  libraryonefunc.c  libraryonefunc.h  libraryonefuncs.c  libraryoneinterface.h
librarytwo/: Makefile.am  configure.ac  liblibrarytwo.pc.in
librarytwo/src/: Makefile.am
librarytwo/src/librarytwo/: Makefile.am  librarytwofunc.c  librarytwofunc.h  librarytwofuncs.c  librarytwointerface.h
program/: configure.ac
program/src/: Makefile.am
program/src/program/: Makefile.am  program.c
