NULL=

bin_PROGRAMS=program

program_SOURCES=													\
	program.c														\
	$(NULL)

AM_CFLAGS=															\
	$(PROGRAM_DEPS_CFLAGS)											\
	$(NULL)

program_LDADD=														\
	$(PROGRAM_DEPS_LIBS)											\
	$(NULL)

CLEANFILES=																\
	.libs																\
	$(NULL)
